--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/well300/zero-two.git"
+        "url": "git+https://github.com/well300/rias-gremory.git"
     },
     "keywords": [
         "bot",
@@ -23,9 +23,9 @@
     "author": "Synthesized Infinity & well300",
     "license": "AGPL-3.0",
     "bugs": {
-        "url": "https://github.com/ShineiIchijo/Chitoge/issues"
+        "url": "https://github.com/well300/rias-gremory/issues"
     },
-    "homepage": "https://github.com/well300/zero-two#readme",
+    "homepage": "https://github.com/well300/rias-gremory#readme",
     "devDependencies": {
         "@types/express": "^4.17.12",
         "@types/fs-extra": "^9.0.11",
