--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "zero-two",
+    "name": "rias-gremory",
     "version": "3.0.0",
     "description": "A WhatsApp Bot With Rich Anime Features.",
-    "main": "dist/zero-two.js",
+    "main": "dist/rias-gremory.js",
     "scripts": {
         "build": "tsc -p .",
-        "start": "node dist/zero-two.js",
+        "start": "node dist/rias-gremory.js",
         "lint": "eslint \"src/**/*.ts\"",
         "prettier-format": "prettier --config .prettierrc \"src/**/*.ts\" --write",
         "postinstall": "yarn run build"
