--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "zero-two",
+    "name": "well-300",
     "version": "3.0.0",
     "description": "A WhatsApp Bot With Rich Anime Features.",
-    "main": "dist/zero-two.js",
+    "main": "dist/well-300.js",
     "scripts": {
         "build": "tsc -p .",
-        "start": "node dist/zero-two.js",
+        "start": "node dist/well-300.js",
         "lint": "eslint \"src/**/*.ts\"",
         "prettier-format": "prettier --config .prettierrc \"src/**/*.ts\" --write",
         "postinstall": "yarn run build"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/well300/zero-two.git"
+        "url": "git+https://github.com/well300/rias-gremory.git"
     },
     "keywords": [
         "bot",
@@ -23,9 +23,9 @@
     "author": "Synthesized Infinity & well300",
     "license": "AGPL-3.0",
     "bugs": {
-        "url": "https://github.com/ShineiIchijo/Chitoge/issues"
+        "url": "https://github.com/well300/rias-gremory/issues"
     },
-    "homepage": "https://github.com/well300/zero-two#readme",
+    "homepage": "https://github.com/well300/rias-gremory#readme",
     "devDependencies": {
         "@types/express": "^4.17.12",
         "@types/fs-extra": "^9.0.11",
