--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "bot",
         "typescript",
         "whatsapp",
-        "chitoge"
+        "rias-gremory"
     ],
     "author": "Synthesized Infinity & well300",
     "license": "AGPL-3.0",
