--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
         "animequotes": "^2.0.0",
         "axios": "^0.24.0",
         "better-tord": "^1.3.7",
-        "canvacord": "^5.2.3",
         "canvas": "^2.8.0",
         "carbon-components": "^10.46.0",
         "chalk": "^4.1.1",
@@ -64,6 +63,7 @@
         "genshin-db": "^3.11.3",
         "get-urls": "^10.0.0",
         "gifencoder": "^2.0.1",
+        "go-image-go": "^1.0.1",
         "i": "^0.3.7",
         "imgbb-uploader": "^1.3.3",
         "jimp": "^0.16.1",
@@ -82,12 +82,10 @@
         "node-periodic-table": "^0.0.6",
         "npm": "^8.1.3",
         "oakdex-pokedex": "^0.4.5",
-        "pokecord": "^1.0.1",
         "pokedex-promise-v2": "^3.3.2",
         "ptable": "^0.0.3",
         "public-waifulist": "0.0.2",
         "qr-image": "^3.2.0",
-        "sharp": "^0.29.3",
         "shentai": "^1.3.0",
         "spotifydl-core": "^0.1.2",
         "text-from-image": "^1.0.1",
@@ -95,7 +93,6 @@
         "translate-google": "^1.5.0",
         "ultra-lyrics": "^1.0.3",
         "vtuber-wiki": "^1.1.5",
-        "w5-textmaker": "^1.0.2",
         "wa-sticker-formatter": "^4.2.0",
         "wikipedia": "^1.1.6",
         "yt-search": "^2.10.2",
